--- a/source/style.scss
+++ b/source/style.scss
@@ -30,3 +30,5 @@ Base includes
 @import 'sections/related-articles';
 @import 'sections/related-products';
 @import 'sections/product';
+@import 'sections/collection-grid';
+@import 'sections/banner-collection';
