--- a/assets/style.css
+++ b/assets/style.css
@@ -3241,4 +3241,190 @@ body .notyf__message a:hover {
   font-size: 3rem;
 }
 
+.collection-grid {
+  background: var(--blue-light);
+  padding-bottom: 4rem;
+  position: relative;
+  overflow: hidden;
+}
+
+.collection-grid-wave2, .collection-grid-wave1 {
+  pointer-events: none;
+  z-index: 1;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 90%;
+  transform: translateY(0%)translateX(-50%)rotate(40deg);
+}
+
+.collection-grid-wave2:after, .collection-grid-wave1:after {
+  content: "";
+  padding-bottom: 56.2225%;
+  display: block;
+  position: relative;
+}
+
+.collection-grid-wave2 svg, .collection-grid-wave1 svg {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.collection-grid-wave2 path, .collection-grid-wave1 path {
+  stroke: var(--green);
+}
+
+.collection-grid-wave2 {
+  transform: translateY(-50%)translateX(-50%)rotate(-130deg);
+}
+
+.collection-grid__list {
+  z-index: 2;
+  max-width: var(--content-width);
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  width: 100%;
+  margin: 0 auto;
+  padding: 10rem 0 0;
+  transition: all 1s cubic-bezier(.365, .04, .44, 1);
+  display: flex;
+  position: relative;
+}
+
+.collection-grid__list.inview {
+  transform: translateX(0%);
+}
+
+.collection-grid__list__title {
+  width: 100%;
+  padding: 0 2rem;
+}
+
+.collection-grid__list__item {
+  flex-wrap: wrap;
+}
+
+.collection-grid__list__item--product {
+  width: 33.3333%;
+  max-width: 50rem;
+  padding: 2rem;
+}
+
+@media only screen and (max-width: 1023px) {
+  .collection-grid__list__item--product {
+    width: 38%;
+    padding: 2rem;
+  }
+}
+
+@media only screen and (max-width: 967px) {
+  .collection-grid__list__item--product {
+    width: 50%;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .collection-grid__list__item--product {
+    width: 80%;
+  }
+}
+
+.collection-grid__list__item--product h6, .collection-grid__list__item--product p {
+  color: var(--green) !important;
+}
+
+.collection-grid__list__item__image {
+  width: 100%;
+}
+
+.collection-grid__list__item__image img {
+  width: 100%;
+  height: auto;
+}
+
+.collection-grid__list__item__title {
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 100%;
+  display: flex;
+}
+
+.collection-grid__list__item__description {
+  width: 100%;
+}
+
+.collection-grid__marquee {
+  white-space: nowrap;
+  white-space: nowrap;
+  flex-wrap: wrap;
+  display: flex;
+  overflow: hidden;
+}
+
+.collection-grid__marquee__animation {
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  will-change: transform;
+  margin: 10rem 0;
+  transition: all 22ms;
+  position: relative;
+  left: -50vw;
+}
+
+.collection-grid__marquee__animation span {
+  white-space: nowrap;
+  color: #0000;
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: var(--green);
+  padding: 4rem 1rem;
+  font-size: 7vw;
+  font-weight: 700;
+  line-height: 8vw;
+}
+
+.banner-collection {
+  position: relative;
+}
+
+.banner-collection-image {
+  aspect-ratio: 16 / 5;
+  background: var(--off-white);
+  background: #a5d1d9;
+  width: 100%;
+  min-height: 30rem;
+  max-height: 72rem;
+}
+
+.banner-collection-image img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.banner-collection-text {
+  max-width: var(--content-width);
+  margin: 0 auto;
+  padding: 6rem;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  right: 0;
+  transform: translateY(-50%);
+}
+
+@media only screen and (max-width: 767px) {
+  .banner-collection-text {
+    padding: 6rem 2rem;
+    top: 65%;
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
