--- a/source/sections/related-articles.scss
+++ b/source/sections/related-articles.scss
@@ -30,6 +30,7 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: flex-start;
+        padding: 4rem 0;
 
         .button {
             margin-right: 2rem;
