--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -10,27 +10,16 @@
       Main navigation
     {% endcomment %}
     <div class="header-nav">
-      <div class="header-nav__item">
-        <a
-          href="/collections/all"
-          class="header-nav__item__link animate-white-to-green {% if link.active %}header-nav__item__link--current{% endif %}"
-          >Shop vitals</a
-        >
-      </div>
-      <div class="header-nav__item">
-        <a
-          href="/collections/all"
-          class="header-nav__item__link animate-white-to-green {% if link.active %}header-nav__item__link--current{% endif %}"
-          >Important bits</a
-        >
-      </div>
-      <div class="header-nav__item">
-        <a
-          href="/collections/all"
-          class="header-nav__item__link animate-white-to-green {% if link.active %}header-nav__item__link--current{% endif %}"
-          >About us</a
-        >
-      </div>
+      {% for link in linklists.main-menu.links -%}
+        <div class="header-nav__item">
+          <a
+            href="{{ link.url }}"
+            class="header-nav__item__link animate-white-to-green {% if link.active %}header-nav__item__link--current{% endif %}"
+          >
+            {{ link.title }}
+          </a>
+        </div>
+      {%- endfor %}
     </div>
 
     {% comment %}
