--- a/source/style.scss
+++ b/source/style.scss
@@ -32,3 +32,4 @@ Base includes
 @import 'sections/product';
 @import 'sections/collection-grid';
 @import 'sections/banner-collection';
+@import 'sections/cart';
