--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -84,6 +84,7 @@
         --blue-light: #E1EDF9;
         --blue-mid: #A5D1D9;
         --blue: #557FC0;
+        --green-light: #A6D3D8;
         --green: #54BAAB;
 
         /* Font Sizes */
