--- a/source/style.scss
+++ b/source/style.scss
@@ -33,3 +33,4 @@ Base includes
 @import 'sections/collection-grid';
 @import 'sections/banner-collection';
 @import 'sections/cart';
+@import 'sections/challenge';
