--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -75,6 +75,7 @@
         --purple-light: #DFDFEE;
         --blue-light: #E1EDF9;
         --blue: #557FC0;
+        --green-light: #A6D3D8;
         --green: #54BAAB;
 
         /* Font Sizes */
