--- a/sections/sidecart.liquid
+++ b/sections/sidecart.liquid
@@ -51,7 +51,7 @@
       </div>
 
       <a href="/checkout" class="button full">Checkout</a>
-      <a href="/checkout" class="link">View my cart</a>
+      <a href="/cart" class="link">View my cart</a>
     </div>
   </div>
 </div>
