--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -146,7 +146,12 @@
     </script>
   </head>
 
-  <body>
+  <body
+    data-page-type="{{ request.page_type }}"
+    {%- if request.page_type == 'product' -%}
+      data-theme="{{ product.collections[0].title }}"
+    {%- endif -%}
+  >
     {{ content_for_header }}
 
     {% section 'header' %}
