--- a/sections/collections-block.liquid
+++ b/sections/collections-block.liquid
@@ -54,7 +54,7 @@
         </div>
         <div class="collections__slider__item__title">
           <h6>
-            <b>xxx {{ product.title }}</b>
+            <b>{{ product.title }}</b>
           </h6>
           <h6>
             <b>${{ product.price | divided_by: 100.00 }}</b>
