--- a/source/sections/product.scss
+++ b/source/sections/product.scss
@@ -54,7 +54,7 @@
         color: var(--green);
         font-size: 4rem;
         text-align: center;
-        line-height: 2.5rem;
+        line-height: 3.3rem;
         cursor: pointer;
         user-select: none;
     }
@@ -62,6 +62,7 @@
         width: calc(100% - 10rem);
 
         input {
+            @include medium;
             border: 0;
             color: var(--green);
             font-size: 3rem;
@@ -70,6 +71,12 @@
             padding: 0;
             background: transparent;
             outline: 0;
+            line-height: 1.4;
         }
     }
+}
+
+
+[data-theme="C-Section Delivery"]{
+    
 }
