--- a/sections/grid-block.liquid
+++ b/sections/grid-block.liquid
@@ -48,9 +48,14 @@
               {{ block.settings.image | image_url: width: 690, height: 340 | image_tag }}
             {% endif %}
           {% else %}
-          {% assign page = pages | where: 'link_url', block.settings.link_link | first %}
-          {% assign blogPageImage = page.image %}
-          {{ blogPageImage | image_url: width: 690, height: 340 | image_tag }}
+            {{ block.settings.link_link }}
+
+            {% assign desired_article = blog.articles | where: 'url', block.settings.link_link | first %}
+            {% if desired_article %}
+
+              ssss
+          {% endif %}
+
           {%- endif -%}
         </div>
         <div class="grid__item__copy">
