--- a/sections/main-article.liquid
+++ b/sections/main-article.liquid
@@ -4,6 +4,8 @@
       <div class="banner-blog-text__constraint">
         <h6 class="white">
           <b>
+            {{ article.handle }}
+            {{ article.url }}
             {% for tag in article.tags %}
               {{ tag }}
               {% unless forloop.last %} | {% endunless %}
