Update type of copy field in accordion block

--- a/sections/accordion-block.liquid
+++ b/sections/accordion-block.liquid
@@ -42,7 +42,7 @@
         },
         {
           "id": "copy",
-          "type": "text",
+          "type": "richtext",
           "label": "Copy"
         }
       ]
