--- a/sections/sidecart.liquid
+++ b/sections/sidecart.liquid
@@ -41,12 +41,15 @@
     <div class="sidecart-draw-items"></div>
     <div class="sidecart-draw-actions">
       <div class="sidecart-draw-actions-lineitem">
-        <h5><span>Subtotal</span><span> $49.99</span></h5>
+        <h5><span>Subtotal</span><span class="[ js-sidecart-total ]">$49.99</span></h5>
       </div>
       <div class="sidecart-draw-actions-afterpay">
         <span>
           Pay in 4 instalments of
-          <span data-alternate-payment-price="" data-currency="" data-money="0">$12.49</span> with</span
+          <span class="[ js-afterpay-payments ]" data-alternate-payment-price="" data-currency="" data-money="0"
+            >$12.49</span
+          >
+          with</span
         ><img src="{{ 'afterpay.svg' | asset_url }}" width="77" height="16" loading="lazy">
       </div>
 
