--- a/source/style.scss
+++ b/source/style.scss
@@ -34,3 +34,6 @@ Base includes
 @import 'sections/banner-collection';
 @import 'sections/cart';
 @import 'sections/challenge';
+@import 'sections/accordion';
+@import 'sections/text';
+@import 'sections/image-text'; 
