--- a/sections/image-text-block.liquid
+++ b/sections/image-text-block.liquid
@@ -1,6 +1,10 @@
-<div class="text">
-  <div class="text__wrap">
-    <div class="text__text [ js-inview ]">
+<div class="element image-element {% if block.settings.reverse_layout %}image-element--reversed{%- endif -%}">
+  <div class="image-element__wrap image-element__wrap--{$Width}">
+    <div class="image-element__wrap__image">
+      {{ block.settings.image | image_url: width: 120, height: 800 | image_tag }}
+    </div>
+
+    <div class="image-element__wrap__text">
       {{ section.settings.text }}
     </div>
   </div>
@@ -16,10 +20,21 @@
   },
   "settings": [
     {
+      "id": "image",
+      "type": "image_picker",
+      "label": "Image"
+    },
+    {
       "type": "richtext",
       "id": "text",
       "default": "<p>Lorem ipsum dolor sit amet. Et fuga nemo eum temporibus sint At perspiciatis deserunt ab nulla quia id fugiat voluptatem ad suscipit numquam. Et ducimus aperiam est nihil unde ut corporis maxime ut consequatur magnam ut consequatur voluptatem. Et delectus facere quo aspernatur temporibus ut quia ipsam et possimus eius ut necessitatibus blanditiis et eius voluptatem aut incidunt quia.</p>",
       "label": "Text"
+    },
+    {
+      "type": "checkbox",
+      "id": "reverse_layout",
+      "label": "Reverse layout",
+      "default": false
     }
   ],
   "presets": [
