Update section names in liquid files

--- a/sections/grid-block-with-text.liquid
+++ b/sections/grid-block-with-text.liquid
@@ -85,7 +85,7 @@
 
 {% schema %}
 {
-  "name": "Grid",
+  "name": "Grid with text",
   "settings": [
     {
       "type": "richtext",
@@ -130,7 +130,7 @@
   ],
   "presets": [
     {
-      "name": "Grid"
+      "name": "Grid with text"
     }
   ]
 }
