--- a/source/style.scss
+++ b/source/style.scss
@@ -37,3 +37,4 @@ Base includes
 @import 'sections/accordion';
 @import 'sections/text';
 @import 'sections/image-text'; 
+@import 'sections/grid-with-text'; 
