--- a/source/sections/grid-with-text.scss
+++ b/source/sections/grid-with-text.scss
@@ -60,7 +60,12 @@
     &__copy {
         width: 50%;
         margin-bottom: 2rem;
-        padding-right: 2rem;
+        padding-right: 8rem;
+
+        @include media($xmd, max) {
+            width: 100%;
+            padding-right: 0;
+        }
 
         * {
             color: var(--green);
@@ -70,6 +75,12 @@
     &__grid {
         width: 50%;
         margin-bottom: 2rem;
+
+        @include media($xmd, max) {
+            width: 100%;
+            padding-right: 0;
+        }
+
     }
 
     &__item {
