--- a/source/sections/banner.scss
+++ b/source/sections/banner.scss
@@ -9,6 +9,10 @@
         max-height: 72rem;
         min-height: 54rem;
 
+        @include media($md, max) {
+            min-height: 90vh;
+        }
+
         img {
             position: absolute;
             display: block;
